# turkcell

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: agent.py  chat.py  health.py  memory.py  mock_bss.py  personalization.py  rag.py  voice.py  voice_live.py
backend/app/logging/: __init__.py  pii_filter.py
backend/app/mcp/: memory_server.py  memory_tools.py  server.py  tools.py
backend/app/models/: agent_schemas.py  chat_schemas.py  customer_memory_schemas.py  personalization_schemas.py  recommendation_schemas.py  schemas.py  voice_schemas.py
backend/app/prompts/: agent_prompts.py  billing_prompts.py  system_prompt.py
backend/app/recognizers/: __init__.py  tc_kimlik_recognizer.py  turkish_iban_recognizer.py  turkish_phone_recognizer.py
backend/app/services/: agent_service.py  agent_tools.py  billing_context.py  chat_service.py  churn_risk_service.py  customer_memory_service.py  edge_tts_service.py  gemini_live_service.py  live_tools.py  market_data_service.py  memory_service.py  mock_bss.py  personalization_engine.py  pii_service.py  rag_service.py  recommendation_service.py  stt_service.py  tts_service.py  usage_pattern_service.py  voice_service.py
backend/data/documents/: destek_rehberi.txt  faq_genel.txt  fatura_bilgileri.txt  kampanya_bilgileri.txt  tariff_descriptions.txt
backend/data/mock/: campaigns.json  customer_profiles.json  customers.json  market_data.json  packages.json  tariffs.json  usage_patterns.json
backend/eval/: __init__.py  conftest.py  eval_runner.py  eval_scoring.py  report_generator.py  test_ai_eval.py
backend/eval/dataset/: eval_cases.json
backend/scripts/: ingest_documents.py
backend/tests/: conftest.py  test_agent.py  test_billing.py  test_chat.py  test_health.py  test_mock_bss.py  test_pii.py  test_rag.py  test_recommendation.py  test_voice.py  test_voice_agent.py  test_voice_live.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  next.config.ts  (+3 more)
(+72 files in other folders)
