[project]
name = "umay-ai-gen-backend"
version = "0.1.0"
description = "Umay AI-Gen Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "pymilvus>=2.4.0",
    "langchain>=1.2.13",
    "langchain-core>=1.2.0,<1.2.23",
    "langchain-google-genai>=4.2.1",
    "langchain-milvus>=0.3.3",
    "langchain-community>=0.4.1",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=1.1.1",
    "sse-starlette>=3.3.4",
    "langchain-redis>=0.2.5",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "spacy>=3.8.14",
    "boto3>=1.35.0",
    "pydub>=0.25.1",
    "google-genai>=1.70.0",
    "edge-tts>=6.1.0",
    "audioop-lts>=0.2.1; python_version>='3.13'",
    "fastapi-mcp>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (deselect with '-m not integration')",
    "ai_eval: marks AI evaluation tests requiring real Gemini API key (run with '-m ai_eval')",
]
